# todomanager

./: .gitignore  README.md  pyproject.toml
todo/: README.md  __init__.py  manager.py  selector.py
